@@ -3,6 +3,7 @@ package top.gabin.java.core.one.section12;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Scanner;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
@@ -36,7 +37,7 @@ public class CHMDDemo {
         int processors = Runtime.getRuntime().availableProcessors();
         ExecutorService executorService = Executors.newFixedThreadPool(processors);
 
-        Path rootPath = Path.of("/Users/linjiabin/IdeaProjects/designPatterns");
+        Path rootPath = Paths.get("/Users/linjiabin/IdeaProjects/designPatterns");
         Set<Path> allPaths = getAllPaths(rootPath);
         for (Path path : allPaths) {
             executorService.execute(()-> process(path));
